Closed
Bug 1180644
Opened 9 years ago
Closed 9 years ago
[B2GDroid] Crash after enabling OOP
Categories
(Firefox OS Graveyard :: Runtime, defect)
Tracking
(firefox42 fixed)
RESOLVED
FIXED
FxOS-S2 (10Jul)
Tracking | Status | |
---|---|---|
firefox42 | --- | fixed |
People
(Reporter: cyu, Assigned: cyu)
References
Details
Attachments
(1 file)
2.50 KB,
patch
|
snorp
:
review+
|
Details | Diff | Splinter Review |
We need to fix the crash after enabling OOP on B2GDroid and make it boot to the homescreen.
Assignee | ||
Comment 1•9 years ago
|
||
This fixes the following crashes:
* In content processes: Android::Bridge() returns nullptr.
* In the chrome process: RenderFrameParent::PostDelayedTask() is invoked on the Android JVM thread.
Attachment #8629929 -
Flags: review?(snorp)
Attachment #8629929 -
Flags: review?(snorp) → review+
Comment 3•9 years ago
|
||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox42:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S2 (10Jul)
You need to log in
before you can comment on or make changes to this bug.
Description
•