Bug 1180644: Fix crashes after enabling OOP on B2GDroid. r=snorp